fix for submenu item spacing and submenu hiding on page load

--- a/css/structure.css
+++ b/css/structure.css
@@ -22,6 +22,7 @@
   white-space: nowrap;
   overflow: hidden;
   margin-right: 15px;
+  width: 100%;
 }
 
 .social-media-structure
